--- a/AutoMemorizeDesktop/FileTaskView.xib
+++ b/AutoMemorizeDesktop/FileTaskView.xib
@@ -89,7 +89,7 @@
 						<string key="NSFrame">{{451, 263}, {40, 40}}</string>
 						<reference key="NSSuperview" ref="630020650"/>
 						<reference key="NSWindow"/>
-						<reference key="NSNextKeyView" ref="954051562"/>
+						<reference key="NSNextKeyView" ref="94378318"/>
 						<string key="NSReuseIdentifierKey">_NS:9</string>
 						<bool key="NSEnabled">YES</bool>
 						<object class="NSButtonCell" key="NSCell" id="696852683">
@@ -115,10 +115,10 @@
 					<object class="NSButton" id="94378318">
 						<reference key="NSNextResponder" ref="630020650"/>
 						<int key="NSvFlags">268</int>
-						<string key="NSFrame">{{13, 165}, {191, 26}}</string>
+						<string key="NSFrame">{{13, 213}, {191, 26}}</string>
 						<reference key="NSSuperview" ref="630020650"/>
 						<reference key="NSWindow"/>
-						<reference key="NSNextKeyView"/>
+						<reference key="NSNextKeyView" ref="954051562"/>
 						<string key="NSReuseIdentifierKey">_NS:9</string>
 						<bool key="NSEnabled">YES</bool>
 						<object class="NSButtonCell" key="NSCell" id="680452956">
@@ -150,7 +150,7 @@
 						<string key="NSFrame">{{22, 226}, {427, 34}}</string>
 						<reference key="NSSuperview" ref="630020650"/>
 						<reference key="NSWindow"/>
-						<reference key="NSNextKeyView" ref="94378318"/>
+						<reference key="NSNextKeyView"/>
 						<string key="NSReuseIdentifierKey">_NS:9</string>
 						<string key="NSAntiCompressionPriority">{250, 750}</string>
 						<bool key="NSEnabled">YES</bool>
@@ -262,6 +262,14 @@
 					</object>
 					<int key="connectionID">195</int>
 				</object>
+				<object class="IBConnectionRecord">
+					<object class="IBActionConnection" key="connection">
+						<string key="label">setChoosedFilePath:</string>
+						<reference key="source" ref="1001"/>
+						<reference key="destination" ref="447011113"/>
+					</object>
+					<int key="connectionID">203</int>
+				</object>
 			</array>
 			<object class="IBMutableOrderedSet" key="objectRecords">
 				<array key="orderedObjects">
@@ -310,15 +318,15 @@
 								<float key="scoringTypeFloat">9</float>
 								<int key="contentType">3</int>
 							</object>
-							<object class="IBNSLayoutConstraint" id="877245135">
-								<reference key="firstItem" ref="630020650"/>
-								<int key="firstAttribute">4</int>
+							<object class="IBNSLayoutConstraint" id="953210737">
+								<reference key="firstItem" ref="94378318"/>
+								<int key="firstAttribute">3</int>
 								<int key="relation">0</int>
-								<reference key="secondItem" ref="94378318"/>
-								<int key="secondAttribute">4</int>
+								<reference key="secondItem" ref="630020650"/>
+								<int key="secondAttribute">3</int>
 								<float key="multiplier">1</float>
 								<object class="IBLayoutConstant" key="constant">
-									<double key="value">167</double>
+									<double key="value">163</double>
 								</object>
 								<float key="priority">1000</float>
 								<reference key="containingView" ref="630020650"/>
@@ -752,11 +760,6 @@
 						<reference key="parent" ref="630020650"/>
 					</object>
 					<object class="IBObjectRecord">
-						<int key="objectID">176</int>
-						<reference key="object" ref="165480864"/>
-						<reference key="parent" ref="630020650"/>
-					</object>
-					<object class="IBObjectRecord">
 						<int key="objectID">183</int>
 						<reference key="object" ref="583318853"/>
 						<reference key="parent" ref="630020650"/>
@@ -782,8 +785,13 @@
 						<reference key="parent" ref="630020650"/>
 					</object>
 					<object class="IBObjectRecord">
-						<int key="objectID">202</int>
-						<reference key="object" ref="877245135"/>
+						<int key="objectID">207</int>
+						<reference key="object" ref="165480864"/>
+						<reference key="parent" ref="630020650"/>
+					</object>
+					<object class="IBObjectRecord">
+						<int key="objectID">214</int>
+						<reference key="object" ref="953210737"/>
 						<reference key="parent" ref="630020650"/>
 					</object>
 				</array>
@@ -812,13 +820,13 @@
 				<string key="151.IBPluginDependency">com.apple.InterfaceBuilder.CocoaPlugin</string>
 				<string key="152.IBPluginDependency">com.apple.InterfaceBuilder.CocoaPlugin</string>
 				<string key="160.IBPluginDependency">com.apple.InterfaceBuilder.CocoaPlugin</string>
-				<string key="176.IBPluginDependency">com.apple.InterfaceBuilder.CocoaPlugin</string>
 				<string key="183.IBPluginDependency">com.apple.InterfaceBuilder.CocoaPlugin</string>
 				<string key="184.IBPluginDependency">com.apple.InterfaceBuilder.CocoaPlugin</string>
 				<string key="185.IBPluginDependency">com.apple.InterfaceBuilder.CocoaPlugin</string>
 				<string key="192.IBPluginDependency">com.apple.InterfaceBuilder.CocoaPlugin</string>
 				<string key="193.IBPluginDependency">com.apple.InterfaceBuilder.CocoaPlugin</string>
-				<string key="202.IBPluginDependency">com.apple.InterfaceBuilder.CocoaPlugin</string>
+				<string key="207.IBPluginDependency">com.apple.InterfaceBuilder.CocoaPlugin</string>
+				<string key="214.IBPluginDependency">com.apple.InterfaceBuilder.CocoaPlugin</string>
 				<array class="NSMutableArray" key="3.IBNSViewMetadataConstraints">
 					<reference ref="139607201"/>
 					<reference ref="979859378"/>
@@ -829,7 +837,7 @@
 					<reference ref="426038813"/>
 					<reference ref="165480864"/>
 					<reference ref="643782130"/>
-					<reference ref="877245135"/>
+					<reference ref="953210737"/>
 					<reference ref="221938075"/>
 				</array>
 				<string key="3.IBPluginDependency">com.apple.InterfaceBuilder.CocoaPlugin</string>
@@ -865,24 +873,13 @@
 			<nil key="activeLocalization"/>
 			<dictionary class="NSMutableDictionary" key="localizations"/>
 			<nil key="sourceID"/>
-			<int key="maxID">202</int>
+			<int key="maxID">214</int>
 		</object>
 		<object class="IBClassDescriber" key="IBDocument.Classes">
 			<array class="NSMutableArray" key="referencedPartialClassDescriptions">
 				<object class="IBPartialClassDescription">
 					<string key="className">FileTaskView</string>
 					<string key="superclassName">NSViewController</string>
-					<object class="NSMutableDictionary" key="actions">
-						<string key="NS.key.0">changeVisibleOthterDirectoryPath:</string>
-						<string key="NS.object.0">id</string>
-					</object>
-					<object class="NSMutableDictionary" key="actionInfosByName">
-						<string key="NS.key.0">changeVisibleOthterDirectoryPath:</string>
-						<object class="IBActionInfo" key="NS.object.0">
-							<string key="name">changeVisibleOthterDirectoryPath:</string>
-							<string key="candidateClassName">id</string>
-						</object>
-					</object>
 					<dictionary class="NSMutableDictionary" key="outlets">
 						<string key="directoryError">NSTextField</string>
 						<string key="directoryField">NSTextField</string>
